# Project-Raiden

./: .gitignore  README.md  environment.yaml  environment.yaml.original  list.txt  requirements.txt
Licences/: cprintf.lic  progressbar.lic  vis3D.lic
Project Planning/: Raiden_v1.pod
Specifications/: ELEN4002_4012-ProjectSpecificationOutline-template-ver3.0.doc
config/: environment.yaml  requirements.txt
data/: .~lock.HS_videos_Smit_Cross_augmented_v01.xlsx#  HS_videos_Smit_Cross_augmented_v01.xlsx  HS_videos_Smit_Cross_augmented_v02.xlsx  HS_videos_Smit_Cross_augmented_v05.01.xlsx  HS_videos_Smit_Cross_augmented_v05.02.xlsx  HS_videos_Smit_Cross_augmented_v05.xlsx
experiments/: nuke_processing_experiments_v01.nk
logs/: alexnet_2019-08-13_003733.txt  alexnet_2019-08-13_004003.txt  alexnet_2019-08-13_022932.txt  alexnet_227x227_2019-08-18_161526.txt  alexnet_227x227_2019-08-18_161547.txt  alexnet_227x227_2019-08-18_194334.txt  alexnet_227x227_2019-08-18_194535.txt  alexnet_227x227_2019-08-18_194653.txt  alexnet_227x227_2019-08-18_195059.txt  deeplabv3_2019-08-09_202933.txt  deeplabv3_2019-08-10_103431.txt  deeplabv3_2019-08-10_103839.txt  deeplabv3_2019-08-10_105629.txt  deeplabv3_2019-08-10_123020.txt  deeplabv3_2019-08-10_171632.txt  deeplabv3_2019-08-10_171747.txt  deeplabv3_2019-08-11_114015.txt  deeplabv3_2019-08-11_114226.txt  deeplabv3_2019-08-12_233052.txt  deeplabv3_256x256_2019-08-14_023535.txt  deeplabv3_256x256_2019-08-14_095629.txt  deeplabv3_256x256_2019-08-14_101627.txt  deeplabv3_256x256_2019-08-14_142612.txt  deeplabv3_256x256_2019-08-14_142804.txt  deeplabv3_256x256_2019-08-14_142835.txt  deeplabv3_256x256_2019-08-14_155140.txt  deeplabv3_256x256_2019-08-15_094654.txt  deeplabv3_256x256_2019-08-16_055308.txt  deeplabv3_256x256_2019-08-17_180404.txt  deeplabv3_256x256_2019-08-17_181214.txt  deeplabv3_256x256_2019-08-17_181247.txt  deeplabv3_256x256_2019-08-17_182051.txt  deeplabv3_256x256_2019-08-17_182233.txt  deeplabv3_256x256_2019-08-17_183025.txt  deeplabv3_256x256_2019-08-17_183648.txt  deeplabv3_256x256_2019-08-17_193557.txt  (+36 more)
matlab/: findEvents.m  (+30 more)
tools/cpp/cine2exr/: CMakeLists.txt
tools/cpp/cine2exr/src/: main.cpp
(+464 files in other folders)
